# template-api-project

./: .dockerignore  .env.example  README.md  docker-compose.yaml  docker_compose.yaml  dockerfile  makefile  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
src/: main.py
src/api/: routes.py  users.py
src/db/: init_db.py  models.py  session.py
src/schemas/: user.py
tests/: conftest.py  test_api.py  test_db.py  test_main.py
