[project]
name = "template-project"
version = "0.1.0"
description = "A template for API apps"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.8",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.2.6",
    "pydantic[email]>=2.10.6",
    "pytest-asyncio>=0.26.0",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.13",
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "ruff>=0.11.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.mypy]
plugins = [
    "sqlalchemy.ext.mypy.plugin"
]
